--- a/changelogStyle.css
+++ b/changelogStyle.css
@@ -5,6 +5,10 @@ body {
       margin: 0;
       padding: 0;
     }
+    p {
+      list-style-type: circle;   /* Default bullet style */
+      padding-left: 20px; 
+    }
     .changelog-container {
       max-width: 700px;
       margin: 40px auto;
@@ -49,13 +53,24 @@ body {
       padding: 0;
       margin: 0;
     }
-    .changelog-list li {
-      margin-bottom: 22px;
+    .changelog-list > li {
+      border-bottom: 1px solid #333; /* or your divider color */
       padding-bottom: 16px;
-      border-bottom: 1px solid #353a4d;
+      margin-bottom: 16px;
     }
-    .changelog-list li:last-child {
+    .changelog-list > li:last-child {
       border-bottom: none;
+    }
+    .changelog-list ul {
+      margin-top: 8px;
+      margin-bottom: 0;
+      padding-left: 24px;
+      border: none;
+    }
+    .changelog-list ul li {
+      border: none !important;      /* Remove any border from bullet points */
+      margin-bottom: 6px;
+      padding-bottom: 0;
     }
     .changelog-date {
       color: #7ecfff;
